# imitation-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: download_model.py
src/drawing_il/: __init__.py  dataset.py  make_demos.py  model.py  rollout.py  train.py
src/il/: collect.py  dataset.py  env.py  evaluate.py  experts.py  model.py  text.py  train.py  utils.py
src/weblinx_il/: __init__.py  actions.py  data.py  evalaute.py  evaluate.py  evaluate_gpt2.py  export_structured.py  gpt2_common.py  inspect.py  live_browser.py  metrics.py  model.py  predict.py  predict_gpt2.py  text.py  train.py  train_gpt2.py
