[project]
name = "imitation-learning"
version = "0.1.0"
description = "Imitation-learning experiments for MiniWoB, drawing demos, and WebLINX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "pillow",
    "pyyaml",
    "tqdm",
    "datasets",
    "transformers",
    "selenium",
    "gymnasium",
    "miniwob",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/il",
]

[tool.hatch.build.targets.sdist]
include = [
    "/.gitignore",
    "/README.md",
    "/configs",
    "/data/drawing/videos",
    "/pyproject.toml",
    "/requirements.txt",
    "/scripts",
    "/src/il",
    "/uv.lock",
]
